[project]
name = "video-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=2.6.1",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["output*"]
